--- a/ECommerce/ECommerce/ECommerce.csproj
+++ b/ECommerce/ECommerce/ECommerce.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="SendGrid" Version="9.20.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
