--- a/ECommerce/ECommerce/Dockerfile
+++ b/ECommerce/ECommerce/Dockerfile
@@ -5,12 +5,42 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+ARG ADMINEMAIL_ARG
+ARG ADMINPASSWORD_ARG
+ARG APILOGINID_ARG
+ARG AUTHORIZELOGINID_ARG
+ARG AUTHORIZETRANSACTIONKEY_ARG
+ARG DISCOVER_ARG
+ARG MASTERCARD_ARG
+ARG SENDGRIDACCOUNTNAME_ARG
+ARG SENDGRID_APIKEY_ARG
+ARG STOREDBURL_ARG
+ARG TESTCVV_ARG
+ARG TESTEXPIRATIONDATE_ARG
+ARG USERDBURL_ARG
+ARG VISA_ARG
+
+ENV ADMINEMAIL=$ADMINEMAIL_ARG
+ENV ADMINPASSWORD=$ADMINPASSWORD_ARG
+ENV APILOGINID=$APILOGINID_ARG
+ENV AUTHORIZELOGINID=$AUTHORIZELOGINID_ARG
+ENV AUTHORIZETRANSACTIONKEY=$AUTHORIZETRANSACTIONKEY_ARG
+ENV DISCOVER=$DISCOVER_ARG
+ENV MASTERCARD=$MASTERCARD_ARG
+ENV SENDGRIDACCOUNTNAME=$SENDGRIDACCOUNTNAME_ARG
+ENV SENDGRID_APIKEY=$SENDGRID_APIKEY_ARG
+ENV STOREDBURL=$STOREDBURL_ARG
+ENV TESTCVV=$TESTCVV_ARG
+ENV TESTEXPIRATIONDATE=$TESTEXPIRATIONDATE_ARG
+ENV USERDBURL=$USERDBURL_ARG
+ENV VISA=$VISA_ARG
+
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["ECommerce/ECommerce.csproj", "ECommerce/"]
-RUN dotnet restore "ECommerce/ECommerce.csproj"
+COPY ["ECommerce.csproj", "./"]
+RUN dotnet restore "./ECommerce.csproj"
 COPY . .
-WORKDIR "/src/ECommerce"
+WORKDIR "/src/."
 RUN dotnet build "ECommerce.csproj" -c Release -o /app/build
 
 FROM build AS publish
@@ -19,4 +49,4 @@ RUN dotnet publish "ECommerce.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "ECommerce.dll"]
+CMD ASPNETCORE_URLS=http://*:$PORT dotnet ECommerce.dll
